# edge_workshop_camera

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 01-project-overview.md  03-ultimate-goal-jetson.md  05-hybrid-escalation-architecture.md  06-jetson-allinone-web-dashboard.md  07-getting-started-action-plan.md  08-jetson-flashing-bringup-runbook.md  09-internet-sharing-setup.md  10-internet-sharing-findings.md  11-nvidia-tooling-and-skills-findings.md  README.md
docs/01-design/: 02-architecture-and-code.md  04-mode2-llm-interpretation.md  06-deployment-topology-edge-relay.md
docs/02-hardware/: 08-jetson-flashing-bringup-runbook.md  09-internet-sharing-setup.md  12-mode3-selftest-runbook.md
docs/03-tooling/: 11-nvidia-tooling-and-skills-findings.md  13-ngrok-demo-tunnel.md
docs/specs/: SPEC-01-layout-and-contracts.md  SPEC-02-relay-and-edge.md  SPEC-03-web-dashboard.md  SPEC-04-mode3-posture.md  SPEC-05-tensorrt-backend.md  SPEC-06-live-fall-tuning.md  SPEC-07-dashboard-mode-switch.md  SPEC-08-mode3-multimodal-and-preview.md  SPEC-09-fall-alarm-sound.md
references/context/: TA_Test_Manual.md
references/context/docs/: DEMO_NETWORK_CHEATSHEET.md  JETSON_SETUP_GUIDE.md
references/context/edge-workshop-camera-en/: Handout_Edge_Sensing_Camera_Audio.md  POSTURE_TEST_GUIDE.md  README.md  codec.py  common.py  compare.py  features.py  mode1_streamer.py  mode2_edge.py  posture.py  posture_selftest.py  relay_server.py  requirements.txt  sensor.py  webcam_selftest.py
references/context/edge-workshop-camera-en/mode3/: MODE3_TEST_GUIDE.md  mode3_dashboard.py  mode3_edge.py  pose.py
scripts/: setup-internet-sharing-macos.sh  setup-internet-sharing-windows.ps1
src/common/: codec.py  config.py  features.py
src/edge/: behaviour.py  mode1_streamer.py  mode2_edge.py  mode3_posture.py  posture.py  posture_selftest.py  sensor.py  supervisor.py  webcam_selftest.py
src/relay/: bandwidth.py  compare.py  relay_server.py
src/web/: alarm.js  app.js  compare.js  content.js  index.html
tests/: conftest.py  test_behaviour.py  test_features_tuning.py  test_mode3_payload.py  test_posture_contract.py  test_relay_control.py  test_relay_posture.py  test_relay_preview.py
